# gui_learning_modules

./: CMakeLists.txt  README.md  main.c  readme.md
src/: FileRenameUtils.c  main.c
src/file/: notebook.c  open.c
src/util/: FileRenameUtils.c
src/widgets/: widgets.c
